# aoc

./: Cargo.toml
src/: main.rs  maze.rs  program.rs  utls.rs  year_2019.rs
src/program/: io.rs  opcode.rs  spawn.rs
src/program/io/: ascii_grid.rs  infallible.rs
src/utls/: color.rs  conversions.rs  display.rs  linalg.rs
src/utls/linalg/: matrix.rs
src/year_2019/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs  day_11.rs  day_12.rs  day_13.rs  day_14.rs  day_15.rs  day_16.rs  day_17.rs  day_18.rs  day_19.rs
