[package]
name = "aoc"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.95"
bit-set = "0.8.0"
derive_more = { version = "2.0.1", features = ["add", "add_assign", "display", "from", "into"] }
fraction = "0.15.3"
itertools = "0.14.0"
maplit = "1.0.2"
num = "0.4.3"
num-traits = { version = "0.2.19", features = ["i128"] }
num_enum = "0.7.3"
rayon = "1.10.0"
regex = "1.11.1"
strum = "0.27.0"
strum_macros = "0.27.0"
